Changes to Siamese Distribution

--- a/templates/verification/verification_detail.html
+++ b/templates/verification/verification_detail.html
@@ -59,7 +59,7 @@
             
             <div class="card mt-3">
     <div class="card-header">
-        <h5>Similarity Metrics</h5>
+        <h5>Similarity</h5>
     </div>
     <div class="card-body">
         <div class="row" id="metrics-container">
